# stock-watch

./: .env  .gitignore  README.md  helper_funcs.py  main.py  personal_aws_access_keys.csv  pyproject.toml  s3_bucket_tools.py
.github/workflows/: deploy.yaml
custom_modules/: s3_utils.py
infra/: .terraform.lock.hcl  cdk.json  main.tf  outputs.tf  terraform.tfstate.backup  terraform.tfvars  variables.tf
infra-folder/: main.tf  terraform.tfstate
infra-folder/lambda_package/: Dockerfile  requirements.txt
infra/cdk/: app.py
infra/cdk/cdk/: cdk_stack.py
infra/cdk/python_cdk_/: cdk_stack.py
infra/lambda_package/analytics/: stock_analyser.py
infra/lambda_package/src/: lambda_function.py
infra/python_cdk_/: app.py  cdk_stack.py
infra/python_cdk_/tests/unit/: test_cdk_stack.py
infra_backup/: main.tf  output.txt  variables.tf
lambdas_source_code/data_ingestion/: Dockerfile  alpha_vantage_data_ingestion.py
src/: fortune_500_scrapper.py
