[tool.poetry]
name = "expenses-tracker"
version = "0.1.0"
description = ""
authors = ["Michael Dzine <michaeldzine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.27.2"
boto3 = "^1.28.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
